--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -93,9 +93,8 @@
     <string name="overflow">Overflow</string>
 
     <string name="list_files_offline_snackbar">You are offline</string>
-    <string name="list_files_sync_info_snackbar">%s items to sync</string>
     <string name="list_files_sync_snackbar">Syncing %s items…</string>
-    <string name="list_files_sync_snackbar_default">Syncing</string>
+    <string name="list_files_sync_snackbar_default">Syncing…</string>
     <string name="list_files_sync_finished_snackbar">Up to date!</string>
     <string name="settings_preference_logs">View logs</string>
     <string name="settings_preference_clear_logs">Clear logs</string>
@@ -272,8 +271,11 @@
     <string name="file_layout_linear_value" translatable="false">linear_layout</string>
 
     <string name="open_new_doc_automatically_key" translatable="false">open_new_doc_automatically</string>
-    <string name="learn_more">Learn more…</string>
+    <string name="learn_more"><a href="https://lockbook.net">Learn more…</a></string>
     <string name="welcome_create">Create</string>
     <string name="welcome_import">Import</string>
     <string name="import_account_do_not_exit">Do not exit the app.</string>
+    <string name="import_account_starting_import">Starting import…</string>
+    <string name="before_you_start">Before you start…</string>
+    <string name="before_you_start_description">Lockbook <a href="https://en.wikipedia.org/wiki/End-to-end_encryption">encrypts</a> your notes with a key that stays on your Lockbook devices. This makes your notes unreadable to anyone but you. If you lose the key, your notes are not recoverable, so we recommend you make a backup in case something happens to this device.</string>
 </resources>
