--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -3,39 +3,13 @@
     <string name="app_name">Lockbook</string>
     <string name="settings_title">Settings</string>
 
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="lockbook_title">Lockbook</string>
+    <string name="lockbook_import">Import Account</string>
+    <string name="create_account">Create Account</string>
 
-    <string name="lockbook_title">lockbook</string>
-    <string name="lockbook_moto">Secure. Private. Reliable.</string>
-    <string name="lockbook_import">Import Lockbook</string>
-    <string name="lockbook_new_account">New Lockbook</string>
+    <string name="import_description">Account string</string>
+    <string name="new_account_username">Choose a username: a–z, 0–9</string>
 
-    <string name="import_description">Enter an account string.</string>
-    <string name="import_account_import_button">Import</string>
-
-    <string name="new_account_description_one">Press continue to generate a keypair.</string>
-    <string name="new_account_description_two">The private component stays on your device.</string>
-    <string name="new_account_description_three">Lockbook is available on every platform, login on another device to keep your key safe.</string>
-    <string name="new_account_description_four">No one can access your content besides you.</string>
-    <string name="new_account_description_five">No one can keep your keys safe besides you.</string>
-    <string name="new_account_username">Select a username.</string>
-    <string name="new_account_submit">Continue</string>
-
-    <string name="new_file_name">Name</string>
-    <string name="new_file_file">File</string>
-    <string name="new_file_folder">Folder</string>
-    <string name="new_file_create">Create</string>
-    <string name="new_file_cancel">Cancel</string>
-
-    <string name="pop_up_info_new_name">New Name</string>
-    <string name="pop_up_info_rename_button_title">Rename File</string>
-    <string name="pop_up_info_delete_button_title">Delete File</string>
     <string name="popup_info_name">Name: %s</string>
     <string name="popup_info_id">ID: %s</string>
     <string name="popup_info_content_version">Content Version: %s</string>
@@ -45,29 +19,19 @@
     <string name="success_delete">Your selected file(s) have been deleted.</string>
 
     <string name="last_synced">Last synced: %s</string>
-    <string name="never_synced">never</string>
     <string name="pop_up_info_never_synced">never synced</string>
-
-    <string name="text_editor_text">Input</string>
-    <string name="text_editor_save_button_title">Save</string>
 
     <string name="settings_export_account_raw">Copy account string to clipboard</string>
     <string name="settings_export_account_qr">Export account string (QR Code)</string>
     <string name="settings_export_account_copied">Account string copied!</string>
     <string name="settings_protect_account_biometric">Biometric options</string>
 
-    <string name="biometrics_save">Save</string>
-
     <string name="biometric_disabled">Disabled</string>
     <string name="biometric_recommended">Protect key export with biometrics (recommended)</string>
     <string name="biometric_strict">Use biometrics every time you open the app (strict mode)</string>
 
-    <string name="menu_search">Search</string>
     <string name="menu_sort">Sort</string>
-    <string name="menu_layout">Layout</string>
     <string name="menu_text_editor_view_md">View Markdown</string>
-    <string name="menu_text_editor_search">Search</string>
-    <string name="menu_text_editor_done">Save</string>
     <string name="menu_text_editor_redo">Redo</string>
     <string name="menu_text_editor_undo">Undo</string>
 
@@ -93,9 +57,8 @@
     <string name="overflow">Overflow</string>
 
     <string name="list_files_offline_snackbar">You are offline</string>
-    <string name="list_files_sync_info_snackbar">%s items to sync</string>
     <string name="list_files_sync_snackbar">Syncing %s items…</string>
-    <string name="list_files_sync_snackbar_default">Syncing</string>
+    <string name="list_files_sync_snackbar_default">Syncing…</string>
     <string name="list_files_sync_finished_snackbar">Up to date!</string>
     <string name="settings_preference_logs">View logs</string>
     <string name="settings_preference_clear_logs">Clear logs</string>
@@ -272,4 +235,10 @@
     <string name="file_layout_linear_value" translatable="false">linear_layout</string>
 
     <string name="open_new_doc_automatically_key" translatable="false">open_new_doc_automatically</string>
+    <string name="learn_more"><a href="https://lockbook.net">Learn more…</a></string>
+    <string name="on_boarding_create">Create</string>
+    <string name="on_boarding_import">Import</string>
+    <string name="import_account_starting_import">Starting import…</string>
+    <string name="before_you_start">Before you start…</string>
+    <string name="before_you_start_description">Lockbook <a href="https://en.wikipedia.org/wiki/End-to-end_encryption">encrypts</a> your notes with a key that stays on your Lockbook devices. This makes your notes unreadable to anyone but you. If you lose the key, your notes are not recoverable, so we recommend you make a backup in case something happens to this device.</string>
 </resources>
