more attempts to get subscription testing to work

--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -234,5 +234,6 @@
     <string name="settings_miscellaneous">Miscellaneous</string>
     <string name="unsubscribe">Unsubscribe</string>
     <string name="subscription_info_key">subscription_info</string>
+    <string name="premium_key">premium</string>
 
 </resources>
