--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -123,7 +123,20 @@
         <item>@string/biometric_strict</item>
     </array>
 
-    <string name="settings_change_subscription">Change your subscription</string>
+    <string name="settings_cancel_subscription">Cancel your subscription</string>
+
+    <string name="settings_cancel_sub_confirmation_title">Cancel Subscription</string>
+    <string name="settings_cancel_sub_confirmation_details">Are you sure you want to cancel your lockbook subscription?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+
+    <string name="learn_more"><a href="https://lockbook.net">Learn more…</a></string>
+    <string name="on_boarding_create">Create</string>
+    <string name="on_boarding_import">Import</string>
+    <string name="import_account_starting_import">Starting import…</string>
+    <string name="before_you_start">Before you start…</string>
+    <string name="before_you_start_description">Lockbook <a href="https://en.wikipedia.org/wiki/End-to-end_encryption">encrypts</a> your notes with a key that stays on your Lockbook devices. This makes your notes unreadable to anyone but you. If you lose the key, your notes are not recoverable, so we recommend you make a backup in case something happens to this device.</string>
+    <string name="drawing_parse_error">Could not open drawing.</string>
 
     <!-- Errors -->
     <string name="no_account">You have no account.</string>
@@ -198,15 +211,10 @@
     <string name="clear_logs_key" translatable="false">clear_logs</string>
 
     <string name="open_new_doc_automatically_key" translatable="false">open_new_doc_automatically</string>
-    <string name="learn_more"><a href="https://lockbook.net">Learn more…</a></string>
-    <string name="on_boarding_create">Create</string>
-    <string name="on_boarding_import">Import</string>
-    <string name="import_account_starting_import">Starting import…</string>
-    <string name="before_you_start">Before you start…</string>
-    <string name="before_you_start_description">Lockbook <a href="https://en.wikipedia.org/wiki/End-to-end_encryption">encrypts</a> your notes with a key that stays on your Lockbook devices. This makes your notes unreadable to anyone but you. If you lose the key, your notes are not recoverable, so we recommend you make a backup in case something happens to this device.</string>
-    <string name="drawing_parse_error">Could not open drawing.</string>
+    <string name="cancel_subscription_key">cancel_subscription</string>
 
-    <string name="change_subscription_key">change_subscription</string>
+    <string name="subscription_info_key">subscription_info</string>
+    <string name="premium_key">premium</string>
 
     <!--    Billing-->
 
@@ -233,7 +241,5 @@
     <string name="settings_premium">Premium</string>
     <string name="settings_miscellaneous">Miscellaneous</string>
     <string name="unsubscribe">Unsubscribe</string>
-    <string name="subscription_info_key">subscription_info</string>
-    <string name="premium_key">premium</string>
 
 </resources>
