more responsive UI, handled some pubsub situations better and fixed clippy/fmt

--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -141,6 +141,7 @@
     <string name="payment_platform">Payment Platform:</string>
     <string name="next_renewal_day">Next Renewal Date:</string>
     <string name="expiration_day">Expiration Day:</string>
+    <string name="grace_period">End of Grace Period:</string>
 
     <!-- Errors -->
     <string name="no_account">You have no account.</string>
@@ -222,28 +223,23 @@
 
     <!--    Billing-->
 
-    <string name="premium_usage_tier">Premium Tier</string>
     <string name="update_to_premium">View Subscription Options</string>
     <string name="choose_your_plan">Choose your plan</string>
-    <string name="yearly_plan">Premium (Yearly)</string>
     <string name="monthly_plan">Premium (Monthly)</string>
     <string name="exit">Exit</string>
     <string name="premium_space">Storage Space</string>
-    <string name="monthly_premium_cost">$2.50 a month</string>
-    <string name="checkmark">Check</string>
     <string name="subscribe">Subscribe</string>
     <string name="free_tier_current">Free (Current)</string>
     <string name="fifty_gb">50 GB</string>
-    <string name="per_year">/ year</string>
     <string name="per_month">/ month</string>
     <string name="one_mb">1 MB</string>
     <string name="two_fifty">$2.50</string>
-    <string name="twenty_five">$25</string>
     <string name="success_subscription_benefit">Your data cap has been extended to 50GB.</string>
     <string name="successful_purchase">Thank you for purchasing premium.</string>
     <string name="upgrade_pitch">If you upgraded to premium, your usage would be:</string>
     <string name="settings_premium">Premium</string>
     <string name="settings_miscellaneous">Miscellaneous</string>
-    <string name="unsubscribe">Unsubscribe</string>
+    <string name="payment_issue">Your renewal has been declined due to a payment issue. Please click the button bellow to resolve it.</string>
+    <string name="update_payment_method">Update Payment Method</string>
 
 </resources>
