--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -126,8 +126,8 @@
     <string name="settings_cancel_subscription">Cancel your subscription</string>
 
     <string name="settings_cancel_sub_confirmation_title">Cancel Subscription</string>
-    <string name="settings_cancel_sub_confirmation_details">Are you sure you want to cancel your lockbook subscription?</string>
-    <string name="settings_cancel_completed">Your lockbook subscription has been canceled.</string>
+    <string name="settings_cancel_sub_confirmation_details">Are you sure you want to cancel your Lockbook subscription?</string>
+    <string name="settings_cancel_completed">Your Lockbook subscription has been canceled.</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
 
@@ -138,10 +138,6 @@
     <string name="before_you_start">Before you start…</string>
     <string name="before_you_start_description">Lockbook <a href="https://en.wikipedia.org/wiki/End-to-end_encryption">encrypts</a> your notes with a key that stays on your Lockbook devices. This makes your notes unreadable to anyone but you. If you lose the key, your notes are not recoverable, so we recommend you make a backup in case something happens to this device.</string>
     <string name="drawing_parse_error">Could not open drawing.</string>
-    <string name="payment_platform">Payment Platform:</string>
-    <string name="next_renewal_day">Next Renewal Date:</string>
-    <string name="expiration_day">Expiration Day:</string>
-    <string name="grace_period">End of Grace Period:</string>
 
     <!-- Errors -->
     <string name="no_account">You have no account.</string>
@@ -173,7 +169,7 @@
     <string name="cannot_move_root">Cannot move root!</string>
     <string name="new_account_disabled">This server is not accepting any new accounts at this moment. Please try again another time.</string>
     <string name="already_premium">Error, you are already premium.</string>
-    <string name="invalid_purchase_token">Failed to verify purchase..</string>
+    <string name="invalid_purchase_token">Failed to verify purchase.</string>
     <string name="too_many_requests_too_soon">You are accessing billing too quickly, please try again in a minute.</string>
     <string name="not_premium">Error, you are not premium.</string>
     <string name="usage_is_over_free_tier_data_cap">Your totally data usage exceeds free tier, please remove some data.</string>
@@ -241,5 +237,9 @@
     <string name="settings_miscellaneous">Miscellaneous</string>
     <string name="payment_issue">Your renewal has been declined due to a payment issue. Please click the button bellow to resolve it.</string>
     <string name="update_payment_method">Update Payment Method</string>
+    <string name="payment_platform">Payment Platform:</string>
+    <string name="next_renewal_day">Next Renewal Date:</string>
+    <string name="expiration_day">Expiration Day:</string>
+    <string name="grace_period">End of Grace Period:</string>
 
 </resources>
