handle toolbar differently, cleaned up code, and added comment to readDocumentBytes

--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -112,6 +112,7 @@
     <string name="settings_open_new_document_automatically">Automatically open new documents</string>
 
     <string name="pdf_page_indicator">%1$d / %2$d</string>
+    <string name="could_not_load_pdf">This PDF could not be loaded.</string>
 
     <!-- Errors -->
     <string name="no_account">You have no account.</string>
