--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -176,7 +176,7 @@
     <string name="existing_request_pending">You are accessing billing too quickly, please try again in a minute.</string>
     <string name="not_premium">Error, you are not premium.</string>
     <string name="already_canceled">You have already canceled your subscription.</string>
-    <string name="usage_is_over_free_tier_data_cap">Your totally data usage exceeds free tier, please remove some data.</string>
+    <string name="usage_is_over_free_tier_data_cap">Your total data usage exceeds free tier. Please remove some data.</string>
 
 
     <string name="unexpected_error">An unexpected error has occurred!</string>
