--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -98,6 +98,10 @@
     <string name="empty_folder">No files</string>
     <string name="bread_crumb_folder">Folder</string>
 
+    <string name="document">Document</string>
+    <string name="folder">Folder</string>
+    <string name="drawing">Drawing</string>
+
     <string name="create_file_title_folder">New Folder</string>
     <string name="create_file_title_document">New Document</string>
     <string name="create_file_title_drawing">New Drawing</string>
